# MAAR

./: .env  .env.development  .env.example  .env.production  .env.staging  .gitignore  ACTION-IMMEDIATE-43MIN.md  COMMANDES-CORRECTION-UBUNTU.md  CORRECTION-CRITIQUE-LANGCHAIN.md  CORRECTION-DOCKER-QUOTES-UBUNTU.md  CORRECTION-FINALE-CONFIRMATION.md  CORRECTION-LANGSMITH-LANGCHAIN.md  CORRECTION-SYNTHESIS-AGENT.md  DEPLOYMENT-FINAL.md  DEPLOYMENT.md  DEVOPS-GUIDE.md  DOCKER-STRATEGIES-GUIDE.md  Dockerfile  Dockerfile.fast  Dockerfile.final  Dockerfile.minimal  Dockerfile.phased  Dockerfile.progressive  Dockerfile.staging  Dockerfile.ultimate  ETAT-FINAL.md  GUIDE-RESOLUTION-OLLAMA.md  GUIDE-SERVEUR-UBUNTU.md  GUIDE-TRANSFERT-RAPIDE.md  GUIDE-URGENCE-BUILD-LENT.md  GUIDE-UTILISATION-RAG.md  INSTRUCTIONS-FINALES.md  INSTRUCTIONS-SERVEUR-UBUNTU-FINAL.md  INSTRUCTIONS-TEST-DOCKER.md  INSTRUCTIONS-TRANSFERT.md  ITERATION-FINALE-BUILD-43MIN.md  ITERATION-FINALE-COMPLETE.md  LICENSE  Makefile  QUICKSTART.md  (+133 more)
agents/: __init__.py
api/: __init__.py  main.py  main_backup.py  main_corrected.py  main_fixed.py  main_simple.py  platform.py
config/: logging.py
core/: __init__.py  celery.py  config.py  exceptions.py  logging.py  models.py
database/: init.sql  manager.py  models.py
docs/: api.md  deployment-guide.md  disaster-recovery-plan.md  operational-maintenance-guide.md  orchestration_sothemaai_integration.md  production-deployment-guide.md  sothemaai_integration_summary.md  user-guide.md
integration/: sothemaai-integration-guide.md
llm/: __init__.py
monitoring/: prometheus.yml
orchestrator/: __init__.py
sample_data/: FAQ.md  GUIDE_UTILISATION.md
scripts/: check_status.sh  deploy-ultimate.sh  emergency-deploy.sh  final-validation.sh  ingest_documents.py  initial-deployment.sh  setup-sothemaai.sh  staging-deploy.sh  syntax-check.py  system-validation.sh  test_end_to_end.py  ultimate-fix.sh  validate-final.sh  validate-system.sh  validation-complete.sh
security/: auth.py
tasks/: __init__.py  analytics.py  document_processing.py  maintenance.py  vectorization.py
tests/: __init__.py  conftest.py  test_orchestration_sothemaai_integration.py
vector_store/: __init__.py  (+6 more)
(+96 files in other folders)
